enabled reactfullpage scrollbar to fix scroll values in scene, sphere now moves on scroll, force hid scrollbar (dots still visible)

--- a/src/styles/nav.module.css
+++ b/src/styles/nav.module.css
@@ -3,7 +3,11 @@
   justify-content: center;
   align-items: center;
   height: 5vh;
-  width: 100vw;
-  background-color: white;
-  color: black;
-}
+  width: 100%;
+  z-index: 10;
+  backdrop-filter: blur(3px);
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 1px 6px;
+  color: "#F0EDCC";
+  position: fixed;
+  top: 0;
+} 
